k8s-config/sal-keycloak-core.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-core
  namespace: sal-keycloak
spec:
  selector:
    app:  keycloak-core
  ports:
    - name: http
      protocol: TCP
      port: 9080
      targetPort: 9080
    - name: https
      protocol: TCP
      port: 9443
      targetPort: 9443
    - name: api
      protocol: TCP
      port: 10990
      targetPort: 10990
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: keycloak-core
  namespace: sal-keycloak
spec:
  selector:
    matchLabels:
      app: keycloak-core
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: keycloak-core
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - image: sal-container-registry.k8s-dev.iamdg.net.ma/keycloak-core:latest
        resources:
          limits:
            memory: "4Gi"
          requests:
            memory: "4Gi"
        name: keycloak-core
        imagePullPolicy: Always
        ports:
        - containerPort: 9080
          name: keycloak-http
        - containerPort: 9443
          name: keycloak-https
        - containerPort: 10990
          name: keycloak-api
