k8s-config/sal-keycloak-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sal-keycloak-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  rules:
  - host: sal-keycloak.k8s-dev.iamdg.net.ma
    http:
      paths:
      - backend:
          serviceName: keycloak-core
          servicePort: 9443
